--- a/EDA_template.ipynb
+++ b/EDA_template.ipynb
@@ -157,6 +157,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y</th>\n",
+       "      <th>Easter</th>\n",
+       "      <th>Thanksgiving</th>\n",
+       "      <th>Christmas</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Marketing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>720.000885</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.68</td>\n",
+       "      <td>41.305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>581.276773</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.73</td>\n",
+       "      <td>131.574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-03</th>\n",
+       "      <td>754.117039</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.23</td>\n",
+       "      <td>162.700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-04</th>\n",
+       "      <td>622.252774</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.96</td>\n",
+       "      <td>160.281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>785.373319</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.92</td>\n",
+       "      <td>51.077</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     y  Easter  Thanksgiving  Christmas  Temperature  \\\n",
+       "Date                                                                   \n",
+       "2015-01-01  720.000885       0             0          0         3.68   \n",
+       "2015-01-02  581.276773       0             0          0         4.73   \n",
+       "2015-01-03  754.117039       0             0          0         7.23   \n",
+       "2015-01-04  622.252774       0             0          0        10.96   \n",
+       "2015-01-05  785.373319       0             0          0         6.92   \n",
+       "\n",
+       "            Marketing  \n",
+       "Date                   \n",
+       "2015-01-01     41.305  \n",
+       "2015-01-02    131.574  \n",
+       "2015-01-03    162.700  \n",
+       "2015-01-04    160.281  \n",
+       "2015-01-05     51.077  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rename variable \n",
+    "# Let's rename the dependent variable. \n",
+    "# (Which is the one that we want to predict)\n",
+    "df = df.rename(columns={'Demand': 'y'})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
