--- a/EDA_template.ipynb
+++ b/EDA_template.ipynb
@@ -280,6 +280,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>y</th>\n",
+       "      <td>2192.0</td>\n",
+       "      <td>756.059227</td>\n",
+       "      <td>152.143070</td>\n",
+       "      <td>425.77532</td>\n",
+       "      <td>641.161123</td>\n",
+       "      <td>736.94763</td>\n",
+       "      <td>855.645886</td>\n",
+       "      <td>1384.908525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Easter</th>\n",
+       "      <td>2192.0</td>\n",
+       "      <td>0.002737</td>\n",
+       "      <td>0.052259</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thanksgiving</th>\n",
+       "      <td>2192.0</td>\n",
+       "      <td>0.002737</td>\n",
+       "      <td>0.052259</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Christmas</th>\n",
+       "      <td>2192.0</td>\n",
+       "      <td>0.002737</td>\n",
+       "      <td>0.052259</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperature</th>\n",
+       "      <td>2192.0</td>\n",
+       "      <td>15.012655</td>\n",
+       "      <td>8.772751</td>\n",
+       "      <td>-8.85000</td>\n",
+       "      <td>7.767500</td>\n",
+       "      <td>14.89500</td>\n",
+       "      <td>23.230000</td>\n",
+       "      <td>30.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Marketing</th>\n",
+       "      <td>2192.0</td>\n",
+       "      <td>126.675890</td>\n",
+       "      <td>58.274047</td>\n",
+       "      <td>24.58900</td>\n",
+       "      <td>78.303500</td>\n",
+       "      <td>122.76450</td>\n",
+       "      <td>169.395250</td>\n",
+       "      <td>299.860000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               count        mean         std        min         25%  \\\n",
+       "y             2192.0  756.059227  152.143070  425.77532  641.161123   \n",
+       "Easter        2192.0    0.002737    0.052259    0.00000    0.000000   \n",
+       "Thanksgiving  2192.0    0.002737    0.052259    0.00000    0.000000   \n",
+       "Christmas     2192.0    0.002737    0.052259    0.00000    0.000000   \n",
+       "Temperature   2192.0   15.012655    8.772751   -8.85000    7.767500   \n",
+       "Marketing     2192.0  126.675890   58.274047   24.58900   78.303500   \n",
+       "\n",
+       "                    50%         75%          max  \n",
+       "y             736.94763  855.645886  1384.908525  \n",
+       "Easter          0.00000    0.000000     1.000000  \n",
+       "Thanksgiving    0.00000    0.000000     1.000000  \n",
+       "Christmas       0.00000    0.000000     1.000000  \n",
+       "Temperature    14.89500   23.230000    30.900000  \n",
+       "Marketing     122.76450  169.395250   299.860000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Summary Statistics\n",
+    "df.describe().transpose()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
