starting prophet code

--- a/exploratory_data_analysis_(eda)/EDA_template.ipynb
+++ b/exploratory_data_analysis_(eda)/EDA_template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "course-material-time-series-forecasting-product/nyc_data.csv\n"
+      "../course-material-time-series-forecasting-product/nyc_data.csv\n"
      ]
     }
    ],
    "source": [
-    "main_path = 'course-material-time-series-forecasting-product'\n",
+    "main_path = '../course-material-time-series-forecasting-product'\n",
     "nyc_data = main_path+str(\"/nyc_data.csv\")\n",
     "print(nyc_data)"
    ]
