transforming the date variable

--- a/Prophetet_parameter_tuning.ipynb
+++ b/Prophetet_parameter_tuning.ipynb
@@ -268,6 +268,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transforming the date variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
+       "      <th>Easter</th>\n",
+       "      <th>Thanksgiving</th>\n",
+       "      <th>Christmas</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Marketing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>720.000885</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.68</td>\n",
+       "      <td>41.305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>581.276773</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.73</td>\n",
+       "      <td>131.574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-03</td>\n",
+       "      <td>754.117039</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.23</td>\n",
+       "      <td>162.700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>622.252774</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.96</td>\n",
+       "      <td>160.281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>785.373319</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.92</td>\n",
+       "      <td>51.077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2187</th>\n",
+       "      <td>2020-12-27</td>\n",
+       "      <td>685.915026</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>38.674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2188</th>\n",
+       "      <td>2020-12-28</td>\n",
+       "      <td>998.051170</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.83</td>\n",
+       "      <td>166.712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2189</th>\n",
+       "      <td>2020-12-29</td>\n",
+       "      <td>847.123399</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>161.865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2190</th>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>857.521043</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.97</td>\n",
+       "      <td>179.634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2191</th>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>783.891494</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.22</td>\n",
+       "      <td>149.221</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2192 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ds           y  Easter  Thanksgiving  Christmas  Temperature  \\\n",
+       "0    2015-01-01  720.000885       0             0          0         3.68   \n",
+       "1    2015-01-02  581.276773       0             0          0         4.73   \n",
+       "2    2015-01-03  754.117039       0             0          0         7.23   \n",
+       "3    2015-01-04  622.252774       0             0          0        10.96   \n",
+       "4    2015-01-05  785.373319       0             0          0         6.92   \n",
+       "...         ...         ...     ...           ...        ...          ...   \n",
+       "2187 2020-12-27  685.915026       0             0          0         2.89   \n",
+       "2188 2020-12-28  998.051170       0             0          0         8.83   \n",
+       "2189 2020-12-29  847.123399       0             0          0         3.48   \n",
+       "2190 2020-12-30  857.521043       0             0          0         5.97   \n",
+       "2191 2020-12-31  783.891494       0             0          0         8.22   \n",
+       "\n",
+       "      Marketing  \n",
+       "0        41.305  \n",
+       "1       131.574  \n",
+       "2       162.700  \n",
+       "3       160.281  \n",
+       "4        51.077  \n",
+       "...         ...  \n",
+       "2187     38.674  \n",
+       "2188    166.712  \n",
+       "2189    161.865  \n",
+       "2190    179.634  \n",
+       "2191    149.221  \n",
+       "\n",
+       "[2192 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# YYYY-MM-DD (this is a standard format but also required for the prophet library)\n",
+    "df.ds = pd.to_datetime(df.ds, format=\"%m/%d/%Y\")\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
