--- a/Prophetet_parameter_tuning.ipynb
+++ b/Prophetet_parameter_tuning.ipynb
@@ -467,6 +467,323 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Holidays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>lower_window</th>\n",
+       "      <th>upper_window</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2015-04-05</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>836</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2017-04-16</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1186</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1571</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2019-04-21</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1928</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2020-04-12</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     holiday         ds  lower_window  upper_window\n",
+       "94    easter 2015-04-05            -5             2\n",
+       "451   easter 2016-03-27            -5             2\n",
+       "836   easter 2017-04-16            -5             2\n",
+       "1186  easter 2018-04-01            -5             2\n",
+       "1571  easter 2019-04-21            -5             2\n",
+       "1928  easter 2020-04-12            -5             2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Easter Holiday\n",
+    "# Get all the Easter dates. \n",
+    "# To do so, we extract from the DataTable when Easter == 1\n",
+    "# '.ds' means we only get the dates\n",
+    "dates = df[df.Easter == 1].ds\n",
+    "\n",
+    "# we create a DataFrame, but also include the window parameter. It represents the days before and the days ahead of the event\n",
+    "# in our case, we do it by choosing '5 days' in advance and only '2 days' afterward\n",
+    "\n",
+    "easter = pd.DataFrame({'holiday': 'easter', 'ds':dates, 'lower_window':-5, 'upper_window':2})\n",
+    "easter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>lower_window</th>\n",
+       "      <th>upper_window</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2015-11-26</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2016-11-24</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1057</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2017-11-23</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2018-11-22</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2019-11-28</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2156</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2020-11-26</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           holiday         ds  lower_window  upper_window\n",
+       "329   thanksgiving 2015-11-26            -3             5\n",
+       "693   thanksgiving 2016-11-24            -3             5\n",
+       "1057  thanksgiving 2017-11-23            -3             5\n",
+       "1421  thanksgiving 2018-11-22            -3             5\n",
+       "1792  thanksgiving 2019-11-28            -3             5\n",
+       "2156  thanksgiving 2020-11-26            -3             5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Thanksgiving \n",
+    "dates = df[df.Thanksgiving == 1].ds\n",
+    "thanksgiving = pd.DataFrame({'holiday': 'thanksgiving', 'ds':dates, 'lower_window':-3, 'upper_window':5})\n",
+    "thanksgiving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>lower_window</th>\n",
+       "      <th>upper_window</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2015-11-26</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2016-11-24</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1057</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2017-11-23</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2018-11-22</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2019-11-28</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2156</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2020-11-26</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        holiday         ds  lower_window  upper_window\n",
+       "329   christmas 2015-11-26            -7             7\n",
+       "693   christmas 2016-11-24            -7             7\n",
+       "1057  christmas 2017-11-23            -7             7\n",
+       "1421  christmas 2018-11-22            -7             7\n",
+       "1792  christmas 2019-11-28            -7             7\n",
+       "2156  christmas 2020-11-26            -7             7"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Christmas \n",
+    "dates = df[df.Thanksgiving == 1].ds\n",
+    "christmas = pd.DataFrame({'holiday': 'christmas', 'ds':dates, 'lower_window':-7, 'upper_window':7})\n",
+    "christmas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
