introducing Prophete model

--- a/Prophetet_parameter_tuning.ipynb
+++ b/Prophetet_parameter_tuning.ipynb
@@ -28,7 +28,7 @@
     "# Libraries \n",
     "import numpy as np \n",
     "import pandas as pd \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -781,6 +781,257 @@
     "dates = df[df.Thanksgiving == 1].ds\n",
     "christmas = pd.DataFrame({'holiday': 'christmas', 'ds':dates, 'lower_window':-7, 'upper_window':7})\n",
     "christmas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combine all events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>lower_window</th>\n",
+       "      <th>upper_window</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2015-04-05</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2016-03-27</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>836</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2017-04-16</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1186</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1571</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2019-04-21</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     holiday         ds  lower_window  upper_window\n",
+       "94    easter 2015-04-05            -5             2\n",
+       "451   easter 2016-03-27            -5             2\n",
+       "836   easter 2017-04-16            -5             2\n",
+       "1186  easter 2018-04-01            -5             2\n",
+       "1571  easter 2019-04-21            -5             2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We need to store and merge everything \n",
+    "holidays = pd.concat([easter, thanksgiving, christmas])\n",
+    "holidays.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drop holidays from DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Marketing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>720.000885</td>\n",
+       "      <td>3.68</td>\n",
+       "      <td>41.305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>581.276773</td>\n",
+       "      <td>4.73</td>\n",
+       "      <td>131.574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-03</td>\n",
+       "      <td>754.117039</td>\n",
+       "      <td>7.23</td>\n",
+       "      <td>162.700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>622.252774</td>\n",
+       "      <td>10.96</td>\n",
+       "      <td>160.281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>785.373319</td>\n",
+       "      <td>6.92</td>\n",
+       "      <td>51.077</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ds           y  Temperature  Marketing\n",
+       "0 2015-01-01  720.000885         3.68     41.305\n",
+       "1 2015-01-02  581.276773         4.73    131.574\n",
+       "2 2015-01-03  754.117039         7.23    162.700\n",
+       "3 2015-01-04  622.252774        10.96    160.281\n",
+       "4 2015-01-05  785.373319         6.92     51.077"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Note that by dropping the holidays we have our regressors (temperature and marketing)\n",
+    "df_final = df.drop(columns=[\"Easter\", \"Thanksgiving\", \"Christmas\"])\n",
+    "df_final.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prophet model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prophet import Prophet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "11:56:58 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:57:02 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<prophet.forecaster.Prophet at 0x7f42511947d0>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Building the model \n",
+    "# It idedntifies the yearly,weakly and daily data automatically if the parameter is set to be 'auto' (default value)\n",
+    "model = Prophet(holidays=holidays, seasonality_mode= \"multiplicative\", seasonality_prior_scale=10, \n",
+    "                holidays_prior_scale=10, changepoint_prior_scale=0.05)\n",
+    "\n",
+    "# Becacuse our df_final dataframe has the regressors, we need to add the following commands\n",
+    "model.add_regressor(\"Temperature\")\n",
+    "model.add_regressor(\"Marketing\")\n",
+    "\n",
+    "model.fit(df_final)"
    ]
   },
   {
