reorganizing folders and preparing the Prophet model

--- a/Exploratory_data_analysis_(eda)/useful_commands_template.ipynb
+++ b/Exploratory_data_analysis_(eda)/useful_commands_template.ipynb
@@ -28,7 +28,8 @@
     "# Libraries \n",
     "import numpy as np \n",
     "import pandas as pd \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import ParameterGrid\n"
    ]
   },
   {
@@ -52,6 +53,30 @@
     "# Rename variable \n",
     "df = df.rename(columns={'Demand': 'y'})\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameter tunning outcome \n",
+    "tuning_results = pd.DataFrame(grid)\n",
+    "tuning_results['rmse'] = rmse\n",
+    "tuning_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exporting the tunned parameters\n",
+    "best_params = tuning_results[tuning_results.rmse == tuning_results.rmse.min()].transpose()\n",
+    "best_params.to_csv(\"XXX_best_params_forecasting_product.csv\")\n",
+    "best_params"
    ]
   }
  ],
