RNN LSTM implementation + parameter tunning. Using darts lib

--- a/Exploratory_data_analysis_(eda)/useful_commands_template.ipynb
+++ b/Exploratory_data_analysis_(eda)/useful_commands_template.ipynb
@@ -78,6 +78,27 @@
     "best_params.to_csv(\"XXX_best_params_forecasting_product.csv\")\n",
     "best_params"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Index col parameter is very important here because otherwise the index will be 0,1,2,...instead of the names we want to have later\n",
+    "parameters = pd.read_csv(\"prophete_best_params_forecasting_product.csv\", index_col=0)\n",
+    "parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exporting \n",
+    "predictions_prophet.to_csv(\"predictions_prophete_forecasting_product.csv\")"
+   ]
   }
  ],
  "metadata": {
