--- a/Prophet/Prophetet_parameter_tuning.ipynb
+++ b/Prophet/Prophetet_parameter_tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/renan/.python_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Libraries \n",
     "import numpy as np \n",
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +138,7 @@
        "4     51.077  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,13 +146,13 @@
    "source": [
     "# load the data (for prophete, the Date information must be part of the data and not an index as the project before.)\n",
     "# YYYY-MM-DD\n",
-    "df = pd.read_csv(nyc_data)\n",
+    "df = pd.read_csv('./nyc_data.csv')\n",
     "df.head() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +256,7 @@
        "4     51.077  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +456,7 @@
        "[2192 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +563,7 @@
        "1928  easter 2020-04-12            -5             2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +671,7 @@
        "2156  thanksgiving 2020-11-26            -3             5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +772,7 @@
        "2156  christmas 2020-11-26            -7             7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -868,20 +859,124 @@
        "      <td>-5</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1928</th>\n",
+       "      <td>easter</td>\n",
+       "      <td>2020-04-12</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2015-11-26</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2016-11-24</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1057</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2017-11-23</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2018-11-22</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2019-11-28</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2156</th>\n",
+       "      <td>thanksgiving</td>\n",
+       "      <td>2020-11-26</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2015-11-26</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2016-11-24</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1057</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2017-11-23</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2018-11-22</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2019-11-28</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2156</th>\n",
+       "      <td>christmas</td>\n",
+       "      <td>2020-11-26</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     holiday         ds  lower_window  upper_window\n",
-       "94    easter 2015-04-05            -5             2\n",
-       "451   easter 2016-03-27            -5             2\n",
-       "836   easter 2017-04-16            -5             2\n",
-       "1186  easter 2018-04-01            -5             2\n",
-       "1571  easter 2019-04-21            -5             2"
+       "           holiday         ds  lower_window  upper_window\n",
+       "94          easter 2015-04-05            -5             2\n",
+       "451         easter 2016-03-27            -5             2\n",
+       "836         easter 2017-04-16            -5             2\n",
+       "1186        easter 2018-04-01            -5             2\n",
+       "1571        easter 2019-04-21            -5             2\n",
+       "1928        easter 2020-04-12            -5             2\n",
+       "329   thanksgiving 2015-11-26            -3             5\n",
+       "693   thanksgiving 2016-11-24            -3             5\n",
+       "1057  thanksgiving 2017-11-23            -3             5\n",
+       "1421  thanksgiving 2018-11-22            -3             5\n",
+       "1792  thanksgiving 2019-11-28            -3             5\n",
+       "2156  thanksgiving 2020-11-26            -3             5\n",
+       "329      christmas 2015-11-26            -7             7\n",
+       "693      christmas 2016-11-24            -7             7\n",
+       "1057     christmas 2017-11-23            -7             7\n",
+       "1421     christmas 2018-11-22            -7             7\n",
+       "1792     christmas 2019-11-28            -7             7\n",
+       "2156     christmas 2020-11-26            -7             7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +984,8 @@
    "source": [
     "# We need to store and merge everything \n",
     "holidays = pd.concat([easter, thanksgiving, christmas])\n",
-    "holidays.head()"
+    "# holidays.head()\n",
+    "holidays"
    ]
   },
   {
